team card social icon spacing fixed

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -148,9 +148,6 @@ button {
   position: relative;
   z-index: 1;
 }
-.list-inline-item:not(:last-child) {
-  margin-right: 0px !important;
-}
 
 .feedback-rating-end {
   .jq-star {
